<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/dp_24"
    tools:context=".features.order.view.OrderCompletedActivity">

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/lav_order_completed"
        android:layout_width="@dimen/dp_300"
        android:layout_height="@dimen/dp_300"
        app:lottie_fileName="order_complete.json"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <androidx.constraintlayout.widget.Group
        android:id="@+id/g_order_completed"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:constraint_referenced_ids="b_back, tv_thank_you, tv_your_order_completed, iv_order_completed"
        tools:visibility="visible" />

    <TextView
        android:id="@+id/tv_thank_you"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_56"
        android:text="@string/thank_you"
        android:textAlignment="center"
        android:textAppearance="?attr/textAppearanceHeadlineMedium"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/tv_your_order_completed"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/dp_16"
        android:layout_marginTop="@dimen/dp_16"
        android:text="@string/pesananmu_telah_selesai"
        android:textAlignment="center"
        android:textAppearance="?attr/textAppearanceTitleMedium"
        android:textColor="@color/black_medium_99000000"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_thank_you" />

    <ImageView
        android:id="@+id/iv_order_completed"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/dp_280"
        android:layout_marginTop="@dimen/dp_56"
        app:srcCompat="@drawable/drawable_order_completed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_your_order_completed" />

    <Button
        android:id="@+id/b_back"
        style="@style/Widget.Refillution.Button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_24"
        android:text="@string/back_to_dashboard"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>