<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".features.product.view.ProductDetailActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/t_product_detail"
        style="@style/Widget.Refillution.Toolbar.Transparent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:title="           "
        app:navigationIcon="@drawable/ic_back_rounded" />

    <androidx.core.widget.NestedScrollView
        android:id="@+id/nsv_product_detail"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/grey_light_2_F1F1F1"
            android:clipChildren="false"
            android:clipToPadding="false"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/iv_product_detail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true" />

            <TextView
                android:id="@+id/tv_product_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="?attr/colorSurface"
                android:paddingHorizontal="@dimen/dp_16"
                android:paddingTop="@dimen/dp_12"
                android:textAppearance="?attr/textAppearanceTitleMedium"
                tools:text="Kick-Ass, (500) Days of Summer, Thafdsfas sfdsfsafdsa fdsfdsafdsa" />

            <TextView
                android:id="@+id/tv_product_price"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="?attr/colorSurface"
                android:paddingHorizontal="@dimen/dp_16"
                android:textAppearance="?attr/textAppearanceHeadlineSmall"
                android:textColor="?attr/colorTertiary"
                android:textStyle="bold"
                tools:text="Rp1.000"
                tools:visibility="visible" />

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_12"
                android:background="@drawable/shape_rounded_bottom" />

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_12"
                android:layout_marginTop="@dimen/dp_8"
                android:background="@drawable/shape_rounded_top" />

            <TextView
                android:id="@+id/tv_volume_or_mass_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="?attr/colorSurface"
                android:paddingHorizontal="@dimen/dp_16"
                android:paddingTop="@dimen/dp_4"
                android:textAppearance="?attr/textAppearanceTitleMedium"
                android:textStyle="bold"
                tools:text="Volume:"
                tools:visibility="visible" />

            <com.google.android.material.chip.ChipGroup
                android:id="@+id/cg_volume_or_mass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="?attr/colorSurface"
                android:paddingHorizontal="@dimen/dp_16"
                app:selectionRequired="true"
                app:singleSelection="true"
                app:chipSpacingHorizontal="@dimen/dp_4" />

            <TextView
                android:id="@+id/tv_quantity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="?attr/colorSurface"
                android:paddingHorizontal="@dimen/dp_16"
                android:paddingTop="@dimen/dp_12"
                android:text="@string/quantity"
                android:textAppearance="?attr/textAppearanceTitleMedium"
                android:textStyle="bold"
                tools:visibility="visible" />

            <com.google.android.material.chip.ChipGroup
                android:id="@+id/cg_quantity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="?attr/colorSurface"
                android:paddingHorizontal="@dimen/dp_16"
                app:selectionRequired="true"
                app:singleSelection="true"
                app:chipSpacingHorizontal="@dimen/dp_4" />

            <TextView
                android:id="@+id/tv_delivery_time"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="?attr/colorSurface"
                android:paddingHorizontal="@dimen/dp_16"
                android:paddingTop="@dimen/dp_12"
                android:text="@string/waktu_pengiriman"
                android:textAppearance="?attr/textAppearanceTitleMedium"
                android:textStyle="bold"
                tools:visibility="visible" />

            <com.google.android.material.chip.ChipGroup
                android:id="@+id/cg_delivery_time"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="?attr/colorSurface"
                android:paddingHorizontal="@dimen/dp_16"
                app:selectionRequired="true"
                app:singleSelection="true"
                app:chipSpacingHorizontal="@dimen/dp_4" />

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_12"
                android:background="@drawable/shape_rounded_bottom" />

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_12"
                android:layout_marginTop="@dimen/dp_8"
                android:background="@drawable/shape_rounded_top" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="?attr/colorSurface"
                android:paddingHorizontal="@dimen/dp_16"
                android:paddingTop="@dimen/dp_4"
                android:paddingBottom="@dimen/dp_16"
                android:text="@string/deskripsi_produk"
                android:textAppearance="?attr/textAppearanceTitleMedium"
                android:textStyle="bold"
                tools:visibility="visible" />

            <com.refillution.util.widget.LabelAndValueTextView
                android:id="@+id/lavtv_merk"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="?attr/colorSurface"
                android:paddingHorizontal="@dimen/dp_16"
                android:paddingTop="@dimen/dp_4"
                app:label="@string/merk" />

            <com.refillution.util.widget.LabelAndValueTextView
                android:id="@+id/lavtv_category"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="?attr/colorSurface"
                android:paddingHorizontal="@dimen/dp_16"
                android:paddingTop="@dimen/dp_4"
                android:paddingBottom="@dimen/dp_16"
                app:label="@string/kategori" />

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_64"
                android:background="?attr/colorSurface" />
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>

    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
        android:id="@+id/fab_checkout"
        style="@style/Widget.Refillution.FloatingActionButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|center"
        android:layout_marginBottom="@dimen/dp_24"
        android:text="@string/beli_sekarang"
        app:icon="@drawable/ic_blibli_cart" />
</FrameLayout>